--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,8 @@
         <div class="container">
             <h1 class="mt-5">Kadal Langit</h1>
             <p class="text-justify">Sebuah game yang menceritakan tentang seorang pahlawan bernama Asarom. Dia berjuang dengan hebat mempertahankan bumi dari invasi kadal langit.</p>
-            <audio id="bgm" src="assets/audio/DB.ogg" autoplay loop="loop" type="audio/ogg"></audio>
+            <audio id="bgm" autoplay src="assets/audio/DB.ogg" type="audio">
+            </audio>
             <script type="text/javascript" src="phaser.min.js"></script>
             <script type="text/javascript" src="Scene1.js"></script>
             <script type="text/javascript" src="Scene2.js"></script>
